--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ __pycache__/
 # C extensions
 *.so
 
+# Adac intermediates
+*.s
+*.ali
+
+# Logs
+*.log
+
 # Distribution / packaging
 .Python
 build/
