--- a/src/gnat-runtime/Makefile.cm7sf
+++ b/src/gnat-runtime/Makefile.cm7sf
@@ -29,15 +29,14 @@
 ##                                                                          ##
 ##--------------------------------------------------------------------------##
 
-GNAT_CRT_ARM=libgnatcm7.a
+GNAT_CRT_ARM=libgnatcm7sf.a
 
 COMMON_CFLAGS = -Os \
 	-ffunction-sections \
 	-fdata-sections \
 	-march=armv7e-m \
 	-mcpu=cortex-m7 \
-	-mfloat-abi=hard \
-    -mfpu=fpv5-d16 \
+	-mfloat-abi=soft \
     -mlittle-endian \
     -mthumb 
 
