Refactored test Makefile to be more portable

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,5 @@
 ## This file is part of the adac-hybrid-arm distribution
-## Copyright (C) 2020, European Space Agency
+## Copyright (C) 2022, European Space Agency
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -13,8 +13,6 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-.PHONY: test clean
-
 # asn1scc/rtl and asn1scc/rtl2 do not work with AdaCore's arm-eabi-gcc
 
 TESTS = \
@@ -26,14 +24,18 @@ TESTS = \
 	intmath \
 	opengeode/basicsdl \
 	opengeode/managemode
-	
 
-test:
-	for t in ${TESTS}; do \
-		( ${MAKE} -C $$t ) || exit $$?; \
-	done
+.PHONY: $(TESTS) test clean
 
-clean:
-	for t in ${TESTS}; do \
-		( ${MAKE} -C $$t clean) || exit $$?; \
-	done
+# Wrapper to invoke each of the goals from TESTS
+# The actual goal (test) of the invocation will be passed via MAKECMDGOALDS
+test: $(TESTS)
+
+# Wrapper to invoke each of the goals from TESTS
+# The actual goal (clean) of the invocation will be passed via MAKECMDGOALDS
+clean: $(TESTS)
+
+# For each goal (test folder) in TESTS, invoke make,
+# passing the high-level goal (test or clean)
+$(TESTS):
+	$(MAKE) -C $@ $(MAKECMDGOALS)
